--- a/src/styles/myfile/Stacks.module.css
+++ b/src/styles/myfile/Stacks.module.css
@@ -3,14 +3,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 30px;
 }
 
 .title {
   font-size: 28px;
-  margin: 30px 0;
   width: 100%;
   text-align: center;
+  margin-bottom: 15px;
 }
 
 .subTitle {
@@ -50,7 +49,8 @@
   cursor: pointer;
 }
 
-li:hover {
+.stackBox li:hover,
+.stackBox2 li:hover {
   transform: scale(1.05);
   transition: all 0.3s;
 }
