--- a/src/styles/background/Information.module.css
+++ b/src/styles/background/Information.module.css
@@ -15,7 +15,7 @@
 
 .headerBg {
   background: linear-gradient(
-    rgb(0, 88, 238) 0%,
+    rgb(0, 88, 238) 5%,
     rgb(53, 147, 255) 4%,
     rgb(40, 142, 255) 6%,
     rgb(18, 125, 255) 8%,
@@ -44,6 +44,7 @@
 
 .header {
   display: flex;
+  justify-content: space-between;
   height: 25px;
   line-height: 25px;
   font-weight: 700;
@@ -58,6 +59,10 @@
   align-items: center;
 }
 
+.headerTitle {
+  display: flex;
+}
+
 .myfileIconBox {
   width: 15px;
   height: 15px;
@@ -69,6 +74,10 @@
 .myfileIcon {
   width: 100%;
   height: 100%;
+}
+
+.closeBtn {
+  margin-right: 1px;
 }
 
 .content {
