--- a/src/styles/myfile/Profile.module.css
+++ b/src/styles/myfile/Profile.module.css
@@ -19,9 +19,13 @@
 }
 
 .imgBox {
-  border: 2px salmon solid;
   width: 270px;
   margin-right: 30px;
+}
+
+.imgBox img {
+  width: 100%;
+  height: 100%;
 }
 
 .profileBox {
@@ -49,7 +53,7 @@
 }
 
 .detail {
-  margin: 5px 0 10px 30px;
+  margin: 8px 0 20px 30px;
 }
 
 .detail a {
